<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "@color/mainBackground"
    android:gravity = "center"
    android:layout_gravity = "center" 
    android:orientation = "horizontal">
    
    <Button
        android:id = "@+id/buttonClear"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:text = "@string/textButtonClear"
        android:textSize = "@dimen/_13ssp"
        android:textColor = "@color/textColorWhite"
        android:background = "@color/buttonClear"
        android:layout_gravity = "center"
        android:gravity = "center"
        android:padding = "@dimen/_10sdp"/>
    
    <Button
        android:id = "@+id/buttonDelete"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:text = "@string/textButtonDelete"
        android:textSize = "@dimen/_13ssp"
        android:textColor = "@color/textColorWhite"
        android:background = "@color/buttonDelete"
        android:layout_gravity = "center"
        android:gravity = "center"
        android:padding = "@dimen/_10sdp"
        android:layout_marginLeft = "@dimen/_10sdp"/>
    
    <Button
        android:id = "@+id/buttonBack"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:text = "@string/textButtonBack"
        android:textSize = "@dimen/_13ssp"
        android:textColor = "@color/textColorWhite"
        android:background = "@color/buttonBack"
        android:layout_gravity = "center"
        android:gravity = "center"
        android:padding = "@dimen/_10sdp"
        android:layout_marginLeft = "@dimen/_10sdp"/>
    
</LinearLayout>