<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "@color/mainBackground">
    
    <LinearLayout
        android:layout_width = "match_parent"
        android:layout_height = "match_parent"
        android:orientation = "vertical">
    
    	<ImageView
        	android:id = "@+id/image"
        	android:layout_width = "@dimen/_120sdp"
        	android:layout_height = "@dimen/_120sdp"
        	android:src = "@drawable/noimage"
        	android:background = "@null"
        	android:layout_gravity = "center"
        	android:layout_marginBottom = "@dimen/_10sdp"/>
    	
    	<EditText
    	    android:id = "@+id/editImage"
    	    android:layout_width = "wrap_content"
    	    android:layout_height = "wrap_content"
    	    android:ems = "10"
    	    android:hint = "no data"
    	    android:textSize = "@dimen/_18ssp"
    	    android:textColor = "@color/textColorBlack"
    	    android:gravity = "center"
    	    android:layout_gravity = "center"
    	    android:padding = "@dimen/_5sdp"
    	    android:layout_marginBottom = "@dimen/_10sdp"/>
    
    	<TextView
        	android:layout_width = "match_parent"
        	android:layout_height = "wrap_content"
        	android:text = "@string/descriptionBrand"
        	android:textSize = "@dimen/_18ssp"
        	android:gravity = "center"
        	android:textColor = "@color/textColorBlack"
        	android:background = "@color/description"
        	android:padding = "@dimen/_5sdp"
        	android:layout_marginBottom = "@dimen/_10sdp"/>
    
    	<EditText
    	    android:id = "@+id/editBrand"
    	    android:layout_width = "wrap_content"
    	    android:layout_height = "wrap_content"
    	    android:ems = "10"
    	    android:hint = "no data"
    	    android:textSize = "@dimen/_18ssp"
    	    android:textColor = "@color/textColorBlack"
    	    android:gravity = "center"
    	    android:layout_gravity = "center"
    	    android:padding = "@dimen/_5sdp"
    	    android:layout_marginBottom = "@dimen/_10sdp"/>
    	
    	<TextView
        	android:layout_width = "match_parent"
        	android:layout_height = "wrap_content"
        	android:text = "@string/descriptionName"
        	android:textSize = "@dimen/_18ssp"
        	android:gravity = "center"
        	android:textColor = "@color/textColorBlack"
        	android:background = "@color/description"
        	android:padding = "@dimen/_5sdp"
        	android:layout_marginBottom = "@dimen/_5sdp"/>
    
    	<EditText
    	    android:id = "@+id/editName"
    	    android:layout_width = "wrap_content"
    	    android:layout_height = "wrap_content"
    	    android:ems = "10"
    	    android:hint = "no data"
    	    android:textSize = "@dimen/_18ssp"
    	    android:textColor = "@color/textColorBlack"
    	    android:gravity = "center"
    	    android:layout_gravity = "center"
    	    android:padding = "@dimen/_5sdp"
    	    android:layout_marginBottom = "@dimen/_10sdp"/>
    	
    	<TextView
        	android:layout_width = "match_parent"
        	android:layout_height = "wrap_content"
        	android:text = "@string/descriptionPrice"
        	android:textSize = "@dimen/_18ssp"
        	android:gravity = "center"
        	android:textColor = "@color/textColorBlack"
        	android:background = "@color/description"
        	android:padding = "@dimen/_5sdp"
        	android:layout_marginBottom = "@dimen/_5sdp"/>
    
    	<EditText
    	    android:id = "@+id/editPrice"
    	    android:layout_width = "wrap_content"
    	    android:layout_height = "wrap_content"
    	    android:ems = "10"
    	    android:hint = "no data"
    	    android:inputType = "numberDecimal"
    	    android:textSize = "@dimen/_18ssp"
    	    android:textColor = "@color/textColorBlack"
    	    android:gravity = "center"
    	    android:layout_gravity = "center"
    	    android:padding = "@dimen/_5sdp"
    	    android:layout_marginBottom = "@dimen/_10sdp"/>
    	
    	<TextView
        	android:layout_width = "match_parent"
        	android:layout_height = "wrap_content"
        	android:text = "@string/descriptionDescription"
        	android:textSize = "@dimen/_18ssp"
        	android:gravity = "center"
        	android:textColor = "@color/textColorBlack"
        	android:background = "@color/description"
        	android:padding = "@dimen/_5sdp"
        	android:layout_marginBottom = "@dimen/_5sdp"/>
    
    	<EditText
    	    android:id = "@+id/editDescription"
    	    android:layout_width = "wrap_content"
    	    android:layout_height = "wrap_content"
    	    android:ems = "10"
    	    android:hint = "no data"
    	    android:textSize = "@dimen/_18ssp"
    	    android:textColor = "@color/textColorBlack"
    	    android:gravity = "center"
    	    android:layout_gravity = "center"
    	    android:padding = "@dimen/_5sdp"
    	    android:layout_marginBottom = "@dimen/_10sdp"/>
    	
    	<TextView
        	android:layout_width = "match_parent"
        	android:layout_height = "wrap_content"
        	android:text = "@string/descriptionCreated"
        	android:textSize = "@dimen/_18ssp"
        	android:gravity = "center"
        	android:textColor = "@color/textColorBlack"
        	android:background = "@color/description"
        	android:padding = "@dimen/_5sdp"
        	android:layout_marginBottom = "@dimen/_5sdp"/>
    
    	<EditText
    	    android:id = "@+id/editCreated"
    	    android:layout_width = "wrap_content"
    	    android:layout_height = "wrap_content"
    	    android:ems = "10"
    	    android:hint = "no data"
    	    android:textSize = "@dimen/_18ssp"
    	    android:textColor = "@color/textColorBlack"
    	    android:gravity = "center"
    	    android:layout_gravity = "center"
    	    android:padding = "@dimen/_5sdp"/>
    	
    </LinearLayout>
    
    
</ScrollView>